kubernetes/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: SmartTaskOrganizer
  namespace: SmartTaskOrganizer
